jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h

#define ACBr

typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;
#define DllImport extern "C"
#define DllImport extern


typedef struct
{
	char Indice[4];
	double Aliquota;
	BOOL Tipo;
	double Total;
	BOOL Sequencia;
} AliquotaRec;


typedef struct
{
	char Indice[4];
	char Descricao[30];
	BOOL PermiteVinculado;
	char FormaPagamento[4];
	double Total;
	int Contador;
} ComprovanteNaoFiscalRec;


typedef struct
{
	char Indice[4];
	char Descricao[30];
	BOOL PermiteVinculado;
	double Total;
	double Data;
	char TipoDoc[30];
} FormaPagamentoRec;


typedef struct
{
	char Indice[4];
	char Descricao[30];
	int Contador;
} RelatorioGerencialRec;

DllImport int ECF_AbreCupomVinculado(const INTPTR ecfHandle, const PCHAR coo, const PCHAR codFormaPagto, const double valor);

DllImport int ECF_AbreCupomVinculadoCNF(const INTPTR ecfHandle, const PCHAR coo, const PCHAR codFormaPagto, const PCHAR codComprovanteNaoFiscal, const double valor);

DllImport int ECF_AbreNaoFiscal(const INTPTR ecfHandle, const PCHAR cpfCnpj, const PCHAR nome, const PCHAR endereco);

DllImport int ECF_AbreRelatorioGerencial(const INTPTR ecfHandle, const int indice);

DllImport int ECF_AchaCNFDescricao(const INTPTR ecfHandle, ComprovanteNaoFiscalRec* comprovanteNaoFiscal, const PCHAR descricao, const BOOL busca, const BOOL ignore);

DllImport int ECF_AchaFPGDescricao(const INTPTR ecfHandle, const PCHAR descricao, const BOOL buscaexata, const BOOL ignorecase, FormaPagamentoRec* formaPagamento);

DllImport int ECF_AchaFPGIndice(const INTPTR ecfHandle, const PCHAR indice, FormaPagamentoRec* formaPagamento);

DllImport int ECF_CancelaNaoFiscal(const INTPTR ecfHandle);

DllImport int ECF_CarregaAliquotas(const INTPTR ecfHandle);

DllImport int ECF_CarregaComprovantesNaoFiscais(const INTPTR ecfHandle);

DllImport int ECF_CarregaFormasPagamento(const INTPTR ecfHandle);

DllImport int ECF_CarregaRelatoriosGerenciais(const INTPTR ecfHandle);

DllImport int ECF_CortaPapel(const INTPTR ecfHandle, const BOOL corteParcial);

DllImport int ECF_DadosReducaoZClass_GetAcrescimoICMS(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetCancelamentoISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetCFD(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetCOO(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetCRO(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetCRZ(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetDescontoICMS(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetGNFC(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetGRG(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetNaoTributadoICMS(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetValorVendaBruta(const INTPTR ecfHandle, double* value);

DllImport int ECF_DoVerificaValorGT(const INTPTR ecfHandle);

DllImport int ECF_EfetuaPagamentoNaoFiscal(const INTPTR ecfHandle, const PCHAR codFormaPagto, const double valor, const PCHAR observacao, const BOOL imprimeVinculado);

DllImport int ECF_FechaNaoFiscal(const INTPTR ecfHandle, const PCHAR observacao, const int indicebmp);

DllImport int ECF_FechaRelatorio(const INTPTR ecfHandle);

DllImport int ECF_GetALCount(const INTPTR ecfHandle, int* value);

DllImport int ECF_GetAliquota(const INTPTR ecfHandle, AliquotaRec* aliquota, const int index);

DllImport int ECF_GetCNFCount(const INTPTR ecfHandle, int* value);

DllImport int ECF_GetComprovanteNaoFiscal(const INTPTR ecfHandle, ComprovanteNaoFiscalRec* comprovanteNaoFiscal, const int index);

DllImport int ECF_GetFormaPagamento(const INTPTR ecfHandle, FormaPagamentoRec* formaPagamento, const int index);

DllImport int ECF_GetFPGCount(const INTPTR ecfHandle, int* value);

DllImport int ECF_GetRelatoriosGerenciais(const INTPTR ecfHandle, RelatorioGerencialRec* relatorio, const int index);

DllImport int ECF_IdentificaPAF(const INTPTR ecfHandle, const PCHAR nomeVersao, const PCHAR md5);

DllImport int ECF_LeituraX(const INTPTR ecfHandle);

DllImport int ECF_LerTotaisAliquota(const INTPTR ecfHandle);

DllImport int ECF_LerTotaisComprovanteNaoFiscal(const INTPTR ecfHandle);

DllImport int ECF_LerTotaisFormaPagamento(const INTPTR ecfHandle);

DllImport int ECF_LerTotaisRelatoriosGerenciais(const INTPTR ecfHandle);

DllImport int ECF_LinhaCupomVinculado(const INTPTR ecfHandle, const PCHAR linha);

DllImport int ECF_LinhaRelatorioGerencial(const INTPTR ecfHandle, const PCHAR linha, const int indiceBMP);

DllImport int ECF_PafMF_LMFC_Cotepe1704(const INTPTR ecfHandle, const double DataInicial, const double DataFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_LMFC_Cotepe1704_CRZ(const INTPTR ecfHandle, const int CRZInicial, const int CRZFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_LMFC_Espelho(const INTPTR ecfHandle, const double DataInicial, const double DataFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_LMFC_Espelho_CRZ(const INTPTR ecfHandle, const int CRZInicial, const int CRZFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_LMFC_Impressao(const INTPTR ecfHandle, const double DataInicial, const double DataFinal);

DllImport int ECF_PafMF_LMFC_Impressao_CRZ(const INTPTR ecfHandle, const int CRZInicial, const int CRZFinal);

DllImport int ECF_PafMF_LMFS_Espelho(const INTPTR ecfHandle, const double DataInicial, const double DataFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_LMFS_Espelho_CRZ(const INTPTR ecfHandle, const int CRZInicial, const int CRZFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_LMFS_Impressao(const INTPTR ecfHandle, const double DataInicial, const double DataFinal);

DllImport int ECF_PafMF_LMFS_Impressao_CRZ(const INTPTR ecfHandle, const int CRZInicial, const int CRZFinal);

DllImport int ECF_PafMF_MFD_Cotepe1704(const INTPTR ecfHandle, const double DataInicial, const double DataFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_MFD_Cotepe1704_COO(const INTPTR ecfHandle, const int COOInicial, const int COOFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_MFD_Espelho(const INTPTR ecfHandle, const double DataInicial, const double DataFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_PafMF_MFD_Espelho_COO(const INTPTR ecfHandle, const int COOInicial, const int COOFinal, const PCHAR CaminhoArquivo);

DllImport int ECF_ProgramaAliquota(const INTPTR ecfHandle, const double aliquota, const char tipo, const PCHAR posicao);

DllImport int ECF_ProgramaComprovanteNaoFiscal(const INTPTR ecfHandle, const PCHAR descricao, const PCHAR tipo, const PCHAR posicao);

DllImport int ECF_ProgramaFormaPagamento(const INTPTR ecfHandle, const PCHAR descricao, const BOOL permiteVinculado, const PCHAR posicao);

DllImport int ECF_ProgramaRelatoriosGerenciais(const INTPTR ecfHandle, const PCHAR descricao, const PCHAR posicao);

DllImport int ECF_PulaLinhas(const INTPTR ecfHandle, const int numLinhas);

DllImport int ECF_ReducaoZ(const INTPTR ecfHandle, const double data);

DllImport int ECF_RegistraItemNaoFiscal(const INTPTR ecfHandle, const PCHAR codCNF, const double value, const PCHAR obs);

DllImport int ECF_RelatorioGerencial(const INTPTR ecfHandle, const PCHAR linhas[], const int linhasCount, const int Via, const int Indice);

DllImport int ECF_SubtotalizaNaoFiscal(const INTPTR ecfHandle, const double descontoAcrescimo, const PCHAR mensagemRodape);